<refactor> (<document>): <Adiciona pequenos ajustes nas fontes e tamanhos de elementos>

--- a/html/about_project.html
+++ b/html/about_project.html
@@ -64,10 +64,15 @@
         <div>
           <h2>ARTIGO CIENTÍFICO</h2>
           <p>
-            Este artigo propõe uma exploração aprofundada e crítica sobre a concepção, desenvolvimento e avaliação de um Bulário Digital, representando uma evolução significativa no acesso e na disseminação de informações precisas sobre medicamentos. 
+            Este artigo propõe uma exploração aprofundada e crítica sobre a
+            concepção, desenvolvimento e avaliação de um Bulário Digital,
+            representando uma evolução significativa no acesso e na disseminação
+            de informações precisas sobre medicamentos.
           </p>
           <p>
-            Em um cenário onde a tecnologia desempenha um papel fundamental na transformação de diversos setores, a área da saúde não fica atrás desse movimento. Confira já nosso Artigo Científico!
+            Em um cenário onde a tecnologia desempenha um papel fundamental na
+            transformação de diversos setores, a área da saúde não fica atrás
+            desse movimento. Confira já nosso Artigo Científico!
           </p>
         </div>
         <figure class="standard_artic">
@@ -81,7 +86,8 @@
         <section>
           <h2>ACESSE TAMBÉM</h2>
           <p>
-            Aqui estão listados os Artigos Científicos que foram usados de apoio para a construção do nosso Artigo:
+            Aqui estão listados os Artigos Científicos que foram usados de apoio
+            para a construção do nosso Artigo:
           </p>
         </section>
         <div class="slider">
@@ -106,7 +112,13 @@
       <article class="agenda2030" id="agenda2030">
         <h2>AGENDA 2030</h2>
         <p class="description">
-          A implementação do Bulário Digital não apenas moderniza a forma como as informações sobre medicamentos são disponibilizadas, mas também desempenha um papel crucial na concretização do ODS 3, almejando um mundo onde todos possam desfrutar de uma vida saudável e bem-estar, com acesso a recursos de saúde e informação. Este é um passo significativo na direção de um futuro mais saudável e sustentável, conforme programado pela Agenda 2030.
+          A implementação do Bulário Digital não apenas moderniza a forma como
+          as informações sobre medicamentos são disponibilizadas, mas também
+          desempenha um papel crucial na concretização do ODS 3, almejando um
+          mundo onde todos possam desfrutar de uma vida saudável e bem-estar,
+          com acesso a recursos de saúde e informação. Este é um passo
+          significativo na direção de um futuro mais saudável e sustentável,
+          conforme programado pela Agenda 2030.
         </p>
         <div class="aspects">
           <div>
@@ -117,7 +129,9 @@
               />
             </figure>
             <p>
-              O Bulário Digital, ao ser uma ferramenta inclusiva e de fácil acesso, permite que comunidades remotas ou desfavorecidas tenham acesso a informações fundamentais. 
+              O Bulário Digital, ao ser uma ferramenta inclusiva e de fácil
+              acesso, permite que comunidades remotas ou desfavorecidas tenham
+              acesso a informações fundamentais.
             </p>
           </div>
           <div>
@@ -128,7 +142,8 @@
               />
             </figure>
             <p>
-              Um instrumento eficaz na promoção da igualdade no acesso à informação e, consequentemente, na promoção da equidade em saúde.
+              Um instrumento eficaz na promoção da igualdade no acesso à
+              informação e, consequentemente, na promoção da equidade em saúde.
             </p>
           </div>
           <div>
@@ -139,7 +154,9 @@
               />
             </figure>
             <p>
-              A digitalização do processo de fornecimento de informações sobre medicamentos melhora a eficiência dos serviços de saúde e aumentar a qualidade do atendimento. 
+              A digitalização do processo de fornecimento de informações sobre
+              medicamentos melhora a eficiência dos serviços de saúde e aumentar
+              a qualidade do atendimento.
             </p>
           </div>
         </div>
@@ -149,10 +166,13 @@
         <div>
           <h2>ENTREVISTAS</h2>
           <p>
-            Fizemos entrevistas com os estudantes de Farmácia pela  Universidade de São Paulo (USP), Lucas (19 anos), Júlia (18 anos) e João Vitor (18 anos).
+            Fizemos entrevistas com os estudantes de Farmácia pela Universidade
+            de São Paulo (USP), Lucas (19 anos), Júlia (18 anos) e João Vitor
+            (18 anos).
           </p>
           <p>
-            Confira, ao lado, as entrevistas sobre o projeto com estudantes da USP!
+            Confira, ao lado, as entrevistas sobre o projeto com estudantes da
+            USP!
           </p>
         </div>
         <div class="btn"><a href="./interview.html">ACESSE JÁ</a></div>
@@ -177,6 +197,7 @@
       </article>
 
       <article class="cannabis">
+        <a href="">ACESSE AQUI!</a>
         <div></div>
         <h2>CANNABIS SATIVA</h2>
         <p>
@@ -191,23 +212,23 @@
     <footer>
       <div>
         <article class="about_us">
-          <p>
+          <p class="title">
             <a href="./sobre.html">Sobre nós</a>
           </p>
-          <p>
+          <p class="topic">
             <a href="./sobre.html#mission">Missão</a>
           </p>
-          <p>
+          <p class="topic">
             <a href="./sobre.html#vision">Visão</a>
           </p>
-          <p>
+          <p class="topic">
             <a href="./sobre.html#values">Valores</a>
           </p>
         </article>
         <article class="contact">
-          <p>Contato</p>
-          <p>wikimedic@yourcompany.com</p>
-          <p>(11)-00000-0000</p>
+          <p class="title">Contato</p>
+          <p class="topic">wikimedic@yourcompany.com</p>
+          <p class="topic">(11)-00000-0000</p>
         </article>
         <article class="social_media">
           <img src="../img/facebook_logo.png" alt="Logo do facebook" />
