fix (medic.html, header): Arruma um pequeno bug do header na hora que você procurava um remédio na página do remédio específico.

--- a/html/medic.html
+++ b/html/medic.html
@@ -7,10 +7,7 @@
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="../style.css" />
-  <link rel="stylesheet" href="../css/main.css" />
-
-  <link rel="stylesheet" href="../css/search-result.css" />
-  
+  <link rel="stylesheet" href="../css/medic.css" />
   <title>Wikimedic</title>
 </head>
 
@@ -27,8 +24,8 @@
     <div class="search">
       <input type="text" id="search" />
       <span class="material-symbols-rounded">search</span>
+      <ul id="result"></ul>
     </div>
-    <ul id="result"></ul>
     <div class="login">
       <a href="./login.html">Login</a>
       <nav class="menu">
