--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
 
       <article class="information">
         <p>
-          O bulário digital mais eficiente do país, com mais de mil bulas digitais disponíveis,. Além disso, o bulário contém a disposição facilitada para auxiliar todo tipo de paciente com dificuldade nas bulas digitais comum. Formando um combo de informação, tecnologia e saúde, tudo ao alcance de um clique!
+          O bulário digital mais eficiente do país, com mais de mil bulas
+          digitais disponíveis,. Além disso, o bulário contém a disposição
+          facilitada para auxiliar todo tipo de paciente com dificuldade nas
+          bulas digitais comum. Formando um combo de informação, tecnologia e
+          saúde, tudo ao alcance de um clique!
         </p>
         <section>
           <div>
@@ -105,7 +109,10 @@
             </p>
           </div>
           <p>
-            Sabemos que com saúde não se pressupõe nenhuma informação, por isso seguindo nossa ética e segurança, aqui temos todas as informações e estudos necessários para a construção do bulário. Acesse e saiba mais!
+            Sabemos que com saúde não se pressupõe nenhuma informação, por isso
+            seguindo nossa ética e segurança, aqui temos todas as informações e
+            estudos necessários para a construção do bulário. Acesse e saiba
+            mais!
           </p>
         </section>
 
@@ -113,10 +120,16 @@
           <h2>ÉTICA, SEGURANÇA E TECNOLOGIA</h2>
           <div>
             <p>
-              Conforme a visão da empresa, a Wikimedic se propõe como um bulário digital, sendo uma ponte para a informação com segurança e a ética presente em cada bula de medicamento apresentada ao nosso público .
+              Conforme a visão da empresa, a Wikimedic se propõe como um bulário
+              digital, sendo uma ponte para a informação com segurança e a ética
+              presente em cada bula de medicamento apresentada ao nosso público
+              .
             </p>
             <p>
-              Utilizando da tecnologia como uma aliada nesse mundo atual, a crianção de uma bula digital facilitadora para o público leigo utiliza sua vantagem para espalhar informação de forma segura e objetiva.
+              Utilizando da tecnologia como uma aliada nesse mundo atual, a
+              crianção de uma bula digital facilitadora para o público leigo
+              utiliza sua vantagem para espalhar informação de forma segura e
+              objetiva.
             </p>
           </div>
         </section>
