feat (medic.html): Adiciona a página dos remédios específicos.

--- a/html/medic.html
+++ b/html/medic.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script
+    src="https://kit.fontawesome.com/3f30397038.js"
+    crossorigin="anonymous"
+  ></script>
   <link rel="stylesheet" href="../style.css" />
   <link rel="stylesheet" href="../css/medic.css" />
   <title>Wikimedic</title>
@@ -49,16 +53,111 @@
   </header>
 
   <main>
-    <section>
-      <p id="medic-name"></p>
-      <a id="medic-pdf"></a>
-    </section>
-    </article>
+    <article class="drug">
+      <section class="header">
+        <img src="../img/spy_family.jpg" alt="">
+        <div>
+          <h1>Spy X Family</h1>
+          <p>Trata depressão, ansiedade, tédio e muito mais.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi voluptatem, earum consectetur doloribus nemo eos aliquam alias accusamus sunt, nostrum labore tempore dolorum? Facere vel nulla, quibusdam voluptas praesentium labore!
+          </p>
+        </div>
+      </section>
+      <section class="informations">
+        <article>
+          <div>
+            <h2>PARA O QUE É INDICADO E PARA O QUE SERVE O SPY X FAMILY</h2>
+            <span id="0" class="fa-solid fa-chevron-down"></span>
+          </div>
+          <hr>
+          <p>Ele é indicado para pessoas que não estão tendo bons dias,e serve para te deixar mais feliz e contente.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum sed unde doloremque maxime iste consequatur, excepturi possimus quas, impedit nostrum omnis! Fugiat et odio, a nihil non esse corporis delectus?
+          </p>
+        </article>
+        <article>
+          <div>
+            <h2>POSOLOGIA DE SPY X FAMILY</h2>
+            <span id="1" class="fa-solid fa-chevron-down"></span>
+          </div>
+          <hr>
+          <p>Não sei o que é posologia.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe molestiae dignissimos, adipisci possimus distinctio tempora sequi nemo accusantium soluta, voluptatem explicabo sunt fugit fugiat. Blanditiis, laudantium esse. Nihil, iusto ex?
+          </p>
+        </article>
+        <article>
+          <div>
+            <h2>SPY X FAMILY, CONTRAINDICAÇÕES</h2>
+            <span id="2" class="fa-solid fa-chevron-down"></span>
+          </div>
+          <hr>
+          <p>Não tem.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quo maxime labore consectetur perspiciatis quisquam doloribus nulla repudiandae id nisi ducimus saepe laudantium molestiae, eaque ullam assumenda necessitatibus corporis aliquid.
+          </p>
+        </article>
+        <article>
+          <div>
+            <h2>REAÇÕES ADVERSAS DE SPY X FAMILY</h2>
+            <span id="3" class="fa-solid fa-chevron-down"></span>
+          </div>
+          <hr>
+          <p>Felicidade extrema podendo acarretar na tomada de decisões sem pensar.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid veritatis, illum dignissimos et aspernatur delectus similique voluptatum qui laudantium quos nesciunt maiores optio voluptates at corporis natus ipsa. Iusto, expedita.
+          </p>
+        </article>
+        <article>
+          <div>
+            <h2>COMO USAR SPY X FAMILY</h2>
+            <span id="4" class="fa-solid fa-chevron-down"></span>
+          </div>
+          <hr>
+          <p>Acesse seu leitor de mangá (mais recomendado) como por exemplo, tachiyomi, mangalivre e entre outros. Ou streaming de anime, como por exemplo, crunchyroll, animes house e entre outros. Agora é só procurar por "SPY X FAMILY" e ler ou assistir com a familia.</p>
+        </article>
+        <article>
+          <div>
+            <h2>CUIDADOS AO TOMAR SPY X FAMILY</h2>
+            <span id="5" class="fa-solid fa-chevron-down"></span>
+          </div>
+          <hr>
+          <p>Não passe muito tempo lendo ou assistindo pois pode causar problemas nas vistas ou coluna, portanto converse com sua familia sobre cada episódio e se divirta com eles para evitar esses riscos.</p>
+        </article>
+        <article>
+          <div>
+            <h2>RISCOS</h2>
+            <span id="6" class="fa-solid fa-chevron-down"></span>
+          </div>
+          <hr>
+          <p>Nenhum.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, veritatis deserunt recusandae neque perferendis, vitae molestiae incidunt consequuntur, temporibus beatae at vel fugit a nesciunt iste odit quia deleniti sapiente?
+          </p>
+        </article>
+        <article>
+          <div>
+            <h2>PACIENTES ESPECIAIS</h2>
+            <span id="7" class="fa-solid fa-chevron-down"></span>
+          </div>
+          <hr>
+          <p>Veja a vontade você está prestes a tomar uma das melhores decisões da sua vida.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem, maiores consequatur. Suscipit, quasi temporibus ipsam consectetur quae dolore ex eum vitae asperiores ut reprehenderit labore cum saepe maxime quisquam nulla?
+          </p>
+        </article>
+        <article>
+          <div>
+            <h2>SUPERDOSE (MAIOR QUE O RECOMENDADO)</h2>
+            <span id="8" class="fa-solid fa-chevron-down"></span>
+          </div>
+          <hr>
+          <p>Saia com a sua família, coma alguma coisa sem ver ou ler e pratique atividades físicas.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore sit adipisci velit? Quaerat exercitationem, alias quia eveniet deleniti doloribus sint enim adipisci aliquid, facere consequatur sit, saepe cumque explicabo sequi.
+          </p>
+        </article>
+      </section>
+    </article >
 
     <script src="../js/env.js" type="module"></script>
     <script src="../js/search.js" type="module"></script>
     <script src="../js/metodoServer.js" type="module" defer></script>
     <script src="../js/medic_load.js" type="module"></script>
+    <script src="../js/show_information.js"></script>
 </body>
 
 </html>
