--- a/html/sobre.html
+++ b/html/sobre.html
@@ -16,14 +16,15 @@
       <div class="logo">
         <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
-      <nav>
-        <a href="../index.html">Home</a>
+      <nav class="main-nav">
+        <a class="selected" href="../index.html">Home</a>
         <a href="./hot_drugs.html">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
       </nav>
       <div class="search">
-        <input type="text" />
+        <input type="text" id="search" />
         <span class="material-symbols-rounded">search</span>
+        <ul id="result"></ul>
       </div>
       <div class="login">
         <a href="./login.html">Login</a>
@@ -35,6 +36,15 @@
             <span></span>
           </div>
           <ul>
+            <li class="responsive-extra">
+              <a class="selected" href="../index.html">Home</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./hot_drugs.html">Em alta</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./sobre.html">Sobre nós</a>
+            </li>
             <li><a href="./pediatria.html">Pediatria</a></li>
             <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
             <li><a href="./genericos.html">Genéricos</a></li>
@@ -56,10 +66,17 @@
         <h2>SOBRE NÓS</h2>
         <div class="text-sobre">
           <p>
-            Criada com o objetivo de auxiliar e facilitar a informação das bulas de medicamentos, houve a criação da Wikimedic, o bulário digital que auxilia milhares de brasileiros no entendimento da bula de medicamentos. Disponibilizando uma linguagem adequada para o público leigo e dispondo todas as informações de forma correta
+            Criada com o objetivo de auxiliar e facilitar a informação das bulas
+            de medicamentos, houve a criação da Wikimedic, o bulário digital que
+            auxilia milhares de brasileiros no entendimento da bula de
+            medicamentos. Disponibilizando uma linguagem adequada para o público
+            leigo e dispondo todas as informações de forma correta
           </p>
           <p>
-            Além do objetivo de facilitar o entendimento de uma bula comum, a criação da Wikimedic também segue o modelo da ODS (Objetivo de Desenvolvimento Sustentável) seguindo a terceira meta anual saúde e bem estar. 
+            Além do objetivo de facilitar o entendimento de uma bula comum, a
+            criação da Wikimedic também segue o modelo da ODS (Objetivo de
+            Desenvolvimento Sustentável) seguindo a terceira meta anual saúde e
+            bem estar.
           </p>
         </div>
       </article>
@@ -68,7 +85,8 @@
         <div class="information">
           <h2>CONHEÇA NOSSA EQUIPE</h2>
           <p>
-            Conheça a <strong>Equipe Wikimedic</strong>, a equipe responsável pela idealização, construção e realização desse incrível projeto!
+            Conheça a <strong>Equipe Wikimedic</strong>, a equipe responsável
+            pela idealização, construção e realização desse incrível projeto!
           </p>
         </div>
         <div class="slider">
@@ -119,7 +137,10 @@
         <h2>VISÃO</h2>
         <div class="text-sobre">
           <p>
-            Visando o crescimento do site e do nosso público, a Wikimedic espera o crescimento de seu reconhecimento como um dos bulários mais importantes do país, tendo em vista o comprometimento com a segurança e a ética nessa área da saúde.
+            Visando o crescimento do site e do nosso público, a Wikimedic espera
+            o crescimento de seu reconhecimento como um dos bulários mais
+            importantes do país, tendo em vista o comprometimento com a
+            segurança e a ética nessa área da saúde.
           </p>
         </div>
       </article>
@@ -136,10 +157,14 @@
         <h2>VALORES</h2>
         <div class="text-sobre">
           <p>
-            Seguindo os princípios do bulário digital, sendo estes a tecnologia, público consumidor da plataforma, segurança e ética, contendo tudo isso a distância de um clique em um plataforma de navegação. 
+            Seguindo os princípios do bulário digital, sendo estes a tecnologia,
+            público consumidor da plataforma, segurança e ética, contendo tudo
+            isso a distância de um clique em um plataforma de navegação.
           </p>
           <p>
-            Nós, criadores deste bulário acreditamos que a ética junto a tecnologia implementada no site, foi o principal influenciador em sua criação, sendo assim seus maiores princípios.
+            Nós, criadores deste bulário acreditamos que a ética junto a
+            tecnologia implementada no site, foi o principal influenciador em
+            sua criação, sendo assim seus maiores princípios.
           </p>
         </div>
         <div class="icons">
