--- a/html/about_project.html
+++ b/html/about_project.html
@@ -16,14 +16,15 @@
       <div class="logo">
         <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
-      <nav>
-        <a href="../index.html">Home</a>
-        <a href="">Em alta</a>
+      <nav class="main-nav">
+        <a class="selected" href="../index.html">Home</a>
+        <a href="./hot_drugs.html">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
       </nav>
       <div class="search">
-        <input type="text" />
+        <input type="text" id="search" />
         <span class="material-symbols-rounded">search</span>
+        <ul id="result"></ul>
       </div>
       <div class="login">
         <a href="./login.html">Login</a>
@@ -35,15 +36,22 @@
             <span></span>
           </div>
           <ul>
+            <li class="responsive-extra">
+              <a class="selected" href="../index.html">Home</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./hot_drugs.html">Em alta</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./sobre.html">Sobre nós</a>
+            </li>
             <li><a href="./pediatria.html">Pediatria</a></li>
             <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
             <li><a href="./genericos.html">Genéricos</a></li>
             <li><a href="./homeopaticos.html">Homeopáticos</a></li>
             <li><a href="./similares.html">Similares</a></li>
             <li><a href="./alopaticos.html">Alopáticos</a></li>
-            <li class="selected">
-              <a href="./about_project.html">Sobre o projeto</a>
-            </li>
+            <li><a href="./about_project.html">Sobre o projeto</a></li>
           </ul>
         </nav>
       </div>
