--- a/html/alopaticos.html
+++ b/html/alopaticos.html
@@ -17,14 +17,15 @@
       <div class="logo">
         <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
-      <nav>
-        <a href="../index.html">Home</a>
+      <nav class="main-nav">
+        <a class="selected" href="../index.html">Home</a>
         <a href="./hot_drugs.html">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
       </nav>
       <div class="search">
-        <input type="text" />
+        <input type="text" id="search" />
         <span class="material-symbols-rounded">search</span>
+        <ul id="result"></ul>
       </div>
       <div class="login">
         <a href="./login.html">Login</a>
@@ -36,14 +37,21 @@
             <span></span>
           </div>
           <ul>
+            <li class="responsive-extra">
+              <a class="selected" href="../index.html">Home</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./hot_drugs.html">Em alta</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./sobre.html">Sobre nós</a>
+            </li>
             <li><a href="./pediatria.html">Pediatria</a></li>
             <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
             <li><a href="./genericos.html">Genéricos</a></li>
             <li><a href="./homeopaticos.html">Homeopáticos</a></li>
             <li><a href="./similares.html">Similares</a></li>
-            <li class="selected">
-              <a class="selected" href="./alopaticos.html">Alopáticos</a>
-            </li>
+            <li><a href="./alopaticos.html">Alopáticos</a></li>
             <li><a href="./about_project.html">Sobre o projeto</a></li>
           </ul>
         </nav>
@@ -56,9 +64,13 @@
 
       <article class="importance">
         <div>
-          <h2>O QUE SÃO OS MEDICAMENTOS ALOPÁTICOS </h2>
+          <h2>O QUE SÃO OS MEDICAMENTOS ALOPÁTICOS</h2>
           <p>
-            Os medicamentos alopáticos são aqueles que atuam no sentido contrário à doença, combatendo suas causas no organismo e agindo para eliminação dos sintomas. Eles são a base da medicina moderna e incluem a maior parte dos medicamentos comercializados em farmácias, como antibióticos, anti-inflamatórios, analgésicos, entre outros.
+            Os medicamentos alopáticos são aqueles que atuam no sentido
+            contrário à doença, combatendo suas causas no organismo e agindo
+            para eliminação dos sintomas. Eles são a base da medicina moderna e
+            incluem a maior parte dos medicamentos comercializados em farmácias,
+            como antibióticos, anti-inflamatórios, analgésicos, entre outros.
           </p>
         </div>
       </article>
@@ -66,7 +78,8 @@
       <article class="carousel-container">
         <h3>EXPLORE</h3>
         <p>
-          Acesse o maior catálogo de bulas  digitais que você já viu! Tenha acesso a toda e qualquer bula a distância de um clique!
+          Acesse o maior catálogo de bulas digitais que você já viu! Tenha
+          acesso a toda e qualquer bula a distância de um clique!
         </p>
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
@@ -122,13 +135,18 @@
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS ALOPÁTICOS</h2>
         <div>
           <p>
-            Os medicamentos alopáticos passam por rigorosos testes clínicos e são aprovados por agências reguladoras, garantindo sua eficácia no tratamento de diversas doenças
+            Os medicamentos alopáticos passam por rigorosos testes clínicos e
+            são aprovados por agências reguladoras, garantindo sua eficácia no
+            tratamento de diversas doenças
           </p>
           <p>
-            Além de tratar doenças, alguns medicamentos alopáticos são usados na prevenção, como vacinas e medicamentos para reduzir o risco de doenças crônicas.
+            Além de tratar doenças, alguns medicamentos alopáticos são usados na
+            prevenção, como vacinas e medicamentos para reduzir o risco de
+            doenças crônicas.
           </p>
           <p>
-            Eles são projetados para agir rapidamente no alívio dos sintomas, proporcionando conforto em curto prazo
+            Eles são projetados para agir rapidamente no alívio dos sintomas,
+            proporcionando conforto em curto prazo
           </p>
         </div>
       </article>
