--- a/html/fitoterapicos.html
+++ b/html/fitoterapicos.html
@@ -17,14 +17,15 @@
       <div class="logo">
         <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
-      <nav>
-        <a href="../index.html">Home</a>
+      <nav class="main-nav">
+        <a class="selected" href="../index.html">Home</a>
         <a href="./hot_drugs.html">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
       </nav>
       <div class="search">
-        <input type="text" />
+        <input type="text" id="search" />
         <span class="material-symbols-rounded">search</span>
+        <ul id="result"></ul>
       </div>
       <div class="login">
         <a href="./login.html">Login</a>
@@ -36,10 +37,17 @@
             <span></span>
           </div>
           <ul>
-            <li><a href="./pediatria.html">Pediatria</a></li>
-            <li>
-              <a class="selected" href="./fitoterapicos.html">Fitoterápicos</a>
+            <li class="responsive-extra">
+              <a class="selected" href="../index.html">Home</a>
             </li>
+            <li class="responsive-extra">
+              <a href="./hot_drugs.html">Em alta</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./sobre.html">Sobre nós</a>
+            </li>
+            <li><a href="./pediatria.html">Pediatria</a></li>
+            <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
             <li><a href="./genericos.html">Genéricos</a></li>
             <li><a href="./homeopaticos.html">Homeopáticos</a></li>
             <li><a href="./similares.html">Similares</a></li>
@@ -58,7 +66,14 @@
         <div>
           <h2>O QUE SÃO OS MEDICAMENTOS FITOTERÁPICOS?</h2>
           <p>
-            Os medicamentos fitoterápicos são produtos fabricados a partir de vegetais ou plantas medicinais, que possuem propriedades terapêuticas. Eles podem ser utilizados para tratar diversas enfermidades, como glaucoma e diabetes, e também para questões relacionadas à ansiedade e depressão. Esses medicamentos são comercializados em várias formas farmacêuticas, como cápsulas, comprimidos, pomadas ou xaropes, e podem ser simples (feitos de uma única planta) ou compostos (com mais de uma planta).
+            Os medicamentos fitoterápicos são produtos fabricados a partir de
+            vegetais ou plantas medicinais, que possuem propriedades
+            terapêuticas. Eles podem ser utilizados para tratar diversas
+            enfermidades, como glaucoma e diabetes, e também para questões
+            relacionadas à ansiedade e depressão. Esses medicamentos são
+            comercializados em várias formas farmacêuticas, como cápsulas,
+            comprimidos, pomadas ou xaropes, e podem ser simples (feitos de uma
+            única planta) ou compostos (com mais de uma planta).
           </p>
         </div>
       </article>
@@ -66,7 +81,8 @@
       <article class="carousel-container">
         <h3>EXPLORE</h3>
         <p>
-          Acesse o maior catálogo de bulas  digitais que você já viu! Tenha acesso a toda e qualquer bula a distância de um clique! 
+          Acesse o maior catálogo de bulas digitais que você já viu! Tenha
+          acesso a toda e qualquer bula a distância de um clique!
         </p>
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
@@ -122,13 +138,20 @@
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS FITOTERÁPICOS</h2>
         <div>
           <p>
-            Os fitoterápicos podem fortalecer o sistema imunológico, ajudando o corpo a combater vírus e bactérias e resistir a doenças comuns como gripes e resfriados.
+            Os fitoterápicos podem fortalecer o sistema imunológico, ajudando o
+            corpo a combater vírus e bactérias e resistir a doenças comuns como
+            gripes e resfriados.
           </p>
           <p>
-            Muitos fitoterápicos possuem propriedades anti-inflamatórias que podem ajudar na redução de inflamações, como as causadas por osteoporose ou artrite reumatoide, e também interromper a produção de agentes causadores de inflamação.
+            Muitos fitoterápicos possuem propriedades anti-inflamatórias que
+            podem ajudar na redução de inflamações, como as causadas por
+            osteoporose ou artrite reumatoide, e também interromper a produção
+            de agentes causadores de inflamação.
           </p>
           <p>
-            Alguns fitoterápicos são úteis no tratamento da ansiedade e depressão, contribuindo para a redução do nível de estresse causado por essas condições.
+            Alguns fitoterápicos são úteis no tratamento da ansiedade e
+            depressão, contribuindo para a redução do nível de estresse causado
+            por essas condições.
           </p>
         </div>
       </article>
