--- a/html/genericos.html
+++ b/html/genericos.html
@@ -17,14 +17,15 @@
       <div class="logo">
         <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
-      <nav>
-        <a href="../index.html">Home</a>
+      <nav class="main-nav">
+        <a class="selected" href="../index.html">Home</a>
         <a href="./hot_drugs.html">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
       </nav>
       <div class="search">
-        <input type="text" />
+        <input type="text" id="search" />
         <span class="material-symbols-rounded">search</span>
+        <ul id="result"></ul>
       </div>
       <div class="login">
         <a href="./login.html">Login</a>
@@ -36,11 +37,18 @@
             <span></span>
           </div>
           <ul>
+            <li class="responsive-extra">
+              <a class="selected" href="../index.html">Home</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./hot_drugs.html">Em alta</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./sobre.html">Sobre nós</a>
+            </li>
             <li><a href="./pediatria.html">Pediatria</a></li>
             <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
-            <li>
-              <a class="selected" href="./genericos.html">Genéricos</a>
-            </li>
+            <li><a href="./genericos.html">Genéricos</a></li>
             <li><a href="./homeopaticos.html">Homeopáticos</a></li>
             <li><a href="./similares.html">Similares</a></li>
             <li><a href="./alopaticos.html">Alopáticos</a></li>
@@ -58,7 +66,12 @@
         <div>
           <h2>O QUE SÃO OS MEDICAMENTOS GENÉRICOS ?</h2>
           <p>
-            Os medicamentos genéricos são fármacos que possuem a mesma composição dos medicamentos de referência, também conhecidos como medicamentos éticos ou de marca.A utilidade dos medicamentos genéricos é vasta, pois eles oferecem os mesmos benefícios terapêuticos que os medicamentos de referência, mas a um custo significativamente menor.
+            Os medicamentos genéricos são fármacos que possuem a mesma
+            composição dos medicamentos de referência, também conhecidos como
+            medicamentos éticos ou de marca.A utilidade dos medicamentos
+            genéricos é vasta, pois eles oferecem os mesmos benefícios
+            terapêuticos que os medicamentos de referência, mas a um custo
+            significativamente menor.
           </p>
         </div>
       </article>
@@ -66,7 +79,8 @@
       <article class="carousel-container">
         <h3>EXPLORE</h3>
         <p>
-          Acesse o maior catálogo de bulas  digitais que você já viu! Tenha acesso a toda e qualquer bula a distância de um clique!
+          Acesse o maior catálogo de bulas digitais que você já viu! Tenha
+          acesso a toda e qualquer bula a distância de um clique!
         </p>
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
@@ -122,13 +136,19 @@
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS GENÉRICOS</h2>
         <div>
           <p>
-            Os genéricos são submetidos a rigorosos testes de bioequivalência e devem cumprir com as mesmas normas de segurança dos medicamentos de referência, garantindo a segurança do consumidor. 
+            Os genéricos são submetidos a rigorosos testes de bioequivalência e
+            devem cumprir com as mesmas normas de segurança dos medicamentos de
+            referência, garantindo a segurança do consumidor.
           </p>
           <p>
-            Eles têm autorização legal para substituir os medicamentos de referência, oferecendo uma alternativa segura e eficaz para tratamentos a um custo menor.
+            Eles têm autorização legal para substituir os medicamentos de
+            referência, oferecendo uma alternativa segura e eficaz para
+            tratamentos a um custo menor.
           </p>
           <p>
-            A presença dos genéricos no mercado estimula a concorrência, o que pode levar à redução dos preços dos medicamentos de referência, beneficiando todos os consumidores
+            A presença dos genéricos no mercado estimula a concorrência, o que
+            pode levar à redução dos preços dos medicamentos de referência,
+            beneficiando todos os consumidores
           </p>
         </div>
       </article>
