--- a/html/homeopaticos.html
+++ b/html/homeopaticos.html
@@ -17,14 +17,15 @@
       <div class="logo">
         <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
-      <nav>
-        <a href="../index.html">Home</a>
+      <nav class="main-nav">
+        <a class="selected" href="../index.html">Home</a>
         <a href="./hot_drugs.html">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
       </nav>
       <div class="search">
-        <input type="text" />
+        <input type="text" id="search" />
         <span class="material-symbols-rounded">search</span>
+        <ul id="result"></ul>
       </div>
       <div class="login">
         <a href="./login.html">Login</a>
@@ -36,12 +37,19 @@
             <span></span>
           </div>
           <ul>
+            <li class="responsive-extra">
+              <a class="selected" href="../index.html">Home</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./hot_drugs.html">Em alta</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./sobre.html">Sobre nós</a>
+            </li>
             <li><a href="./pediatria.html">Pediatria</a></li>
             <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
             <li><a href="./genericos.html">Genéricos</a></li>
-            <li>
-              <a class="selected" href="./homeopaticos.html">Homeopáticos</a>
-            </li>
+            <li><a href="./homeopaticos.html">Homeopáticos</a></li>
             <li><a href="./similares.html">Similares</a></li>
             <li><a href="./alopaticos.html">Alopáticos</a></li>
             <li><a href="./about_project.html">Sobre o projeto</a></li>
@@ -58,7 +66,13 @@
         <div>
           <h2>O QUE SÃO OS MEDICAMENTOS HOMEOPÁTICOS</h2>
           <p>
-            A homeopatia é um método terapêutico que utiliza substâncias que, em grandes quantidades, provocariam os sintomas da doença que se deseja tratar. Seguindo o princípio de que “semelhante cura semelhante”, essas substâncias são utilizadas em doses ultra diluídas para estimular as defesas naturais do corpo e promover a autocura. A importância dos medicamentos homeopáticos reside em sua abordagem holística e individualizada do tratamento.
+            A homeopatia é um método terapêutico que utiliza substâncias que, em
+            grandes quantidades, provocariam os sintomas da doença que se deseja
+            tratar. Seguindo o princípio de que “semelhante cura semelhante”,
+            essas substâncias são utilizadas em doses ultra diluídas para
+            estimular as defesas naturais do corpo e promover a autocura. A
+            importância dos medicamentos homeopáticos reside em sua abordagem
+            holística e individualizada do tratamento.
           </p>
         </div>
       </article>
@@ -66,7 +80,8 @@
       <article class="carousel-container">
         <h3>EXPLORE</h3>
         <p>
-          Acesse o maior catálogo de bulas  digitais que você já viu! Tenha acesso a toda e qualquer bula a distância de um clique!
+          Acesse o maior catálogo de bulas digitais que você já viu! Tenha
+          acesso a toda e qualquer bula a distância de um clique!
         </p>
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
@@ -122,13 +137,18 @@
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS HOMEOPÁTICOS</h2>
         <div>
           <p>
-            Os remédios homeopáticos são conhecidos por serem suaves e não causarem efeitos colaterais significativos, tornando-os uma opção segura para pessoas de todas as idades, incluindo idosos e bebês.
+            Os remédios homeopáticos são conhecidos por serem suaves e não
+            causarem efeitos colaterais significativos, tornando-os uma opção
+            segura para pessoas de todas as idades, incluindo idosos e bebês.
           </p>
           <p>
-            A homeopatia foca no equilíbrio orgânico e trata a pessoa como um todo, buscando a raiz do problema para promover a melhora geral do organismo.
+            A homeopatia foca no equilíbrio orgânico e trata a pessoa como um
+            todo, buscando a raiz do problema para promover a melhora geral do
+            organismo.
           </p>
           <p>
-            São considerados seguros e eficazes, baseados em substâncias naturais e utilizam substâncias simples em microdoses.
+            São considerados seguros e eficazes, baseados em substâncias
+            naturais e utilizam substâncias simples em microdoses.
           </p>
         </div>
       </article>
