--- a/html/medic.html
+++ b/html/medic.html
@@ -20,8 +20,8 @@
     <div class="logo">
       <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
     </div>
-    <nav>
-      <a href="../index.html">Home</a>
+    <nav class="main-nav">
+      <a class="selected" href="../index.html">Home</a>
       <a href="./hot_drugs.html">Em alta</a>
       <a href="./sobre.html">Sobre nós</a>
     </nav>
@@ -40,6 +40,15 @@
           <span></span>
         </div>
         <ul>
+          <li class="responsive-extra">
+            <a class="selected" href="../index.html">Home</a>
+          </li>
+          <li class="responsive-extra">
+            <a href="./hot_drugs.html">Em alta</a>
+          </li>
+          <li class="responsive-extra">
+            <a href="./sobre.html">Sobre nós</a>
+          </li>
           <li><a href="./pediatria.html">Pediatria</a></li>
           <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
           <li><a href="./genericos.html">Genéricos</a></li>
