--- a/html/pediatria.html
+++ b/html/pediatria.html
@@ -17,14 +17,15 @@
       <div class="logo">
         <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
-      <nav>
-        <a href="../index.html">Home</a>
+      <nav class="main-nav">
+        <a class="selected" href="../index.html">Home</a>
         <a href="./hot_drugs.html">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
       </nav>
       <div class="search">
-        <input type="text" />
+        <input type="text" id="search" />
         <span class="material-symbols-rounded">search</span>
+        <ul id="result"></ul>
       </div>
       <div class="login">
         <a href="./login.html">Login</a>
@@ -36,6 +37,15 @@
             <span></span>
           </div>
           <ul>
+            <li class="responsive-extra">
+              <a class="selected" href="../index.html">Home</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./hot_drugs.html">Em alta</a>
+            </li>
+            <li class="responsive-extra">
+              <a href="./sobre.html">Sobre nós</a>
+            </li>
             <li><a href="./pediatria.html">Pediatria</a></li>
             <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
             <li><a href="./genericos.html">Genéricos</a></li>
@@ -57,7 +67,13 @@
         <div>
           <h2>A IMPORTÂNCIA DOS CUIDADOS PEDIÁTRICOS</h2>
           <p>
-            Os medicamentos pediátricos são de extrema importância para a saúde e o bem-estar das crianças. Eles são formulados especificamente para atender às necessidades únicas dessa faixa etária, levando em consideração fatores como peso, metabolismo e estágio de desenvolvimento. O uso racional desses medicamentos é essencial para garantir a segurança dos pacientes pediátricos, bem como para fornecer tratamento eficaz para diversas condições médicas.
+            Os medicamentos pediátricos são de extrema importância para a saúde
+            e o bem-estar das crianças. Eles são formulados especificamente para
+            atender às necessidades únicas dessa faixa etária, levando em
+            consideração fatores como peso, metabolismo e estágio de
+            desenvolvimento. O uso racional desses medicamentos é essencial para
+            garantir a segurança dos pacientes pediátricos, bem como para
+            fornecer tratamento eficaz para diversas condições médicas.
           </p>
         </div>
         <div>
@@ -68,7 +84,8 @@
       <article class="carousel-container">
         <h3>EXPLORE</h3>
         <p>
-          Acesse o maior catálogo de bulas  digitais que você já viu ! Tenha acesso a toda e qualquer bula a distância de um clique!
+          Acesse o maior catálogo de bulas digitais que você já viu ! Tenha
+          acesso a toda e qualquer bula a distância de um clique!
         </p>
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
@@ -124,13 +141,22 @@
         <h2>3 BENEFÍCIOS DOS MEDICAMENTOS PEDIATRIA</h2>
         <div>
           <p>
-            Os medicamentos pediátricos passam por testes rigorosos para garantir que sejam seguros e eficazes para uso em crianças. Isso ajuda a evitar a extrapolação de dados de adultos para crianças, que podem ter respostas diferentes aos medicamentos.
+            Os medicamentos pediátricos passam por testes rigorosos para
+            garantir que sejam seguros e eficazes para uso em crianças. Isso
+            ajuda a evitar a extrapolação de dados de adultos para crianças, que
+            podem ter respostas diferentes aos medicamentos.
           </p>
           <p>
-            Eles estão disponíveis em formas farmacêuticas adequadas para crianças, como líquidos, suspensões e mastigáveis, facilitando a administração e garantindo que as crianças possam tomar o medicamento de forma segura e confortável.
+            Eles estão disponíveis em formas farmacêuticas adequadas para
+            crianças, como líquidos, suspensões e mastigáveis, facilitando a
+            administração e garantindo que as crianças possam tomar o
+            medicamento de forma segura e confortável.
           </p>
           <p>
-            Os medicamentos pediátricos são formulados para fornecer a dosagem correta com base no peso e na idade da criança, o que é crucial para a eficácia do tratamento e para minimizar os riscos de efeitos colaterais.
+            Os medicamentos pediátricos são formulados para fornecer a dosagem
+            correta com base no peso e na idade da criança, o que é crucial para
+            a eficácia do tratamento e para minimizar os riscos de efeitos
+            colaterais.
           </p>
         </div>
       </article>
