--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="./css/main.css" />
     <title>Wikimedic</title>
   </head>
-
   <body>
     <header>
       <div class="logo">
@@ -52,7 +51,7 @@
             <li><a href="./html/homeopaticos.html">Homeopáticos</a></li>
             <li><a href="./html/similares.html">Similares</a></li>
             <li><a href="./html/alopaticos.html">Alopáticos</a></li>
-            <li><a href="./about_project.html">Sobre o projeto</a></li>
+            <li><a href="./html/about_project.html">Sobre o projeto</a></li>
           </ul>
         </nav>
       </div>
