fix (header): Adiciona pequenos ajustes na responsividade do header p.2

--- a/html/homeopaticos.html
+++ b/html/homeopaticos.html
@@ -18,7 +18,7 @@
         <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
       <nav class="main-nav">
-        <a class="selected" href="../index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="./hot_drugs.html">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
       </nav>
@@ -38,7 +38,7 @@
           </div>
           <ul>
             <li class="responsive-extra">
-              <a class="selected" href="../index.html">Home</a>
+              <a href="../index.html">Home</a>
             </li>
             <li class="responsive-extra">
               <a href="./hot_drugs.html">Em alta</a>
@@ -49,7 +49,9 @@
             <li><a href="./pediatria.html">Pediatria</a></li>
             <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
             <li><a href="./genericos.html">Genéricos</a></li>
-            <li><a href="./homeopaticos.html">Homeopáticos</a></li>
+            <li>
+              <a class="selected" href="./homeopaticos.html">Homeopáticos</a>
+            </li>
             <li><a href="./similares.html">Similares</a></li>
             <li><a href="./alopaticos.html">Alopáticos</a></li>
             <li><a href="./about_project.html">Sobre o projeto</a></li>
