--- a/html/about_project.html
+++ b/html/about_project.html
@@ -17,7 +17,7 @@
         <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
       <nav class="main-nav">
-        <a class="selected" href="../index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="./hot_drugs.html">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
       </nav>
@@ -37,7 +37,7 @@
           </div>
           <ul>
             <li class="responsive-extra">
-              <a class="selected" href="../index.html">Home</a>
+              <a href="../index.html">Home</a>
             </li>
             <li class="responsive-extra">
               <a href="./hot_drugs.html">Em alta</a>
@@ -51,7 +51,11 @@
             <li><a href="./homeopaticos.html">Homeopáticos</a></li>
             <li><a href="./similares.html">Similares</a></li>
             <li><a href="./alopaticos.html">Alopáticos</a></li>
-            <li><a href="./about_project.html">Sobre o projeto</a></li>
+            <li>
+              <a class="selected" href="./about_project.html"
+                >Sobre o projeto</a
+              >
+            </li>
           </ul>
         </nav>
       </div>
