--- a/html/medic.html
+++ b/html/medic.html
@@ -21,7 +21,7 @@
       <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
     </div>
     <nav class="main-nav">
-      <a class="selected" href="../index.html">Home</a>
+      <a href="../index.html">Home</a>
       <a href="./hot_drugs.html">Em alta</a>
       <a href="./sobre.html">Sobre nós</a>
     </nav>
@@ -41,7 +41,7 @@
         </div>
         <ul>
           <li class="responsive-extra">
-            <a class="selected" href="../index.html">Home</a>
+            <a href="../index.html">Home</a>
           </li>
           <li class="responsive-extra">
             <a href="./hot_drugs.html">Em alta</a>
