--- a/html/pediatria.html
+++ b/html/pediatria.html
@@ -18,7 +18,7 @@
         <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
       <nav class="main-nav">
-        <a class="selected" href="../index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="./hot_drugs.html">Em alta</a>
         <a href="./sobre.html">Sobre nós</a>
       </nav>
@@ -38,7 +38,7 @@
           </div>
           <ul>
             <li class="responsive-extra">
-              <a class="selected" href="../index.html">Home</a>
+              <a href="../index.html">Home</a>
             </li>
             <li class="responsive-extra">
               <a href="./hot_drugs.html">Em alta</a>
@@ -46,7 +46,7 @@
             <li class="responsive-extra">
               <a href="./sobre.html">Sobre nós</a>
             </li>
-            <li><a href="./pediatria.html">Pediatria</a></li>
+            <li><a class="selected" href="./pediatria.html">Pediatria</a></li>
             <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
             <li><a href="./genericos.html">Genéricos</a></li>
             <li><a href="./homeopaticos.html">Homeopáticos</a></li>
