--- a/html/sobre.html
+++ b/html/sobre.html
@@ -17,9 +17,9 @@
         <img src="../img/wikimedic.png" alt="Logo da Wikimedic" />
       </div>
       <nav class="main-nav">
-        <a class="selected" href="../index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="./hot_drugs.html">Em alta</a>
-        <a href="./sobre.html">Sobre nós</a>
+        <a class="selected" href="./sobre.html">Sobre nós</a>
       </nav>
       <div class="search">
         <input type="text" id="search" />
@@ -37,13 +37,13 @@
           </div>
           <ul>
             <li class="responsive-extra">
-              <a class="selected" href="../index.html">Home</a>
+              <a href="../index.html">Home</a>
             </li>
             <li class="responsive-extra">
               <a href="./hot_drugs.html">Em alta</a>
             </li>
             <li class="responsive-extra">
-              <a href="./sobre.html">Sobre nós</a>
+              <a class="selected" href="./sobre.html">Sobre nós</a>
             </li>
             <li><a href="./pediatria.html">Pediatria</a></li>
             <li><a href="./fitoterapicos.html">Fitoterápicos</a></li>
