feat (index.html, sobre.html): Adiciona responsividade à página index.html e começa a responsividade no sobre.html.

--- a/html/sobre.html
+++ b/html/sobre.html
@@ -91,7 +91,7 @@
         </div>
         <div class="slider">
           <div class="person">
-            <img src="../img/edward.jpg" alt="Foto do aluno André Dias" />
+            <img src="../img/andre_img.jpg" alt="Foto do aluno André Dias" />
             <p class="role">Programador Back-end</p>
             <p class="decription">
               Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
@@ -99,7 +99,10 @@
             </p>
           </div>
           <div class="person">
-            <img src="../img/tendou.jpg" alt="Foto do aluno Arthur Rolemberg" />
+            <img
+              src="../img/art_img.png"
+              alt="Foto do aluno Arthur Rolemberg"
+            />
             <p class="role">Programador Front-end</p>
             <p class="decription">
               Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
@@ -107,7 +110,7 @@
             </p>
           </div>
           <div class="person">
-            <img src="../img/robin.jpg" alt="Foto da aluna Beatriz Bezerra" />
+            <img src="../img/bea_img.jpg" alt="Foto da aluna Beatriz Bezerra" />
             <p class="role">Designer / Líder de Projeto</p>
             <p class="decription">
               Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
@@ -115,7 +118,7 @@
             </p>
           </div>
           <div class="person">
-            <img src="../img/yami.jpg" alt="Foto do aluno Eduardo Rossi" />
+            <img src="../img/du_img.png" alt="Foto do aluno Eduardo Rossi" />
             <p class="role">Pesquisador</p>
             <p class="decription">
               Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
