--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="./css/main.css" />
   <title>Wikimedic</title>
@@ -118,18 +117,14 @@
         <section class="main">
           <h2>ÉTICA, SEGURANÇA E TECNOLOGIA</h2>
           <div>
-            <p>
-              Conforme a visão da empresa, a Wikimedic se propõe como um bulário
+              <span>Conforme a visão da empresa, a Wikimedic se propõe como um bulário
               digital, sendo uma ponte para a informação com segurança e a ética
-              presente em cada bula de medicamento apresentada ao nosso público
-              .
-            </p>
-            <p>
-              Utilizando da tecnologia como uma aliada nesse mundo atual, a
+              presente em cada bula de medicamento apresentada ao nosso público.</span>
+                <br><br>
+              <span>Utilizando da tecnologia como uma aliada nesse mundo atual, a
               crianção de uma bula digital facilitadora para o público leigo
               utiliza sua vantagem para espalhar informação de forma segura e
-              objetiva.
-            </p>
+              objetiva.</span>
           </div>
         </section>
       </article>
@@ -158,17 +153,18 @@
         </article>
         <article class="social_media">
           <a href="#"
-            ><img src="../img/facebook_logo.png" alt="Logo do facebook"
+            ><img src="./img/facebook_logo.png" alt="Logo do facebook"
           /></a>
           <a href="#"
-            ><img src="../img/instagram_logo.png" alt="Logo do instagram"
+            ><img src="./img/instagram_logo.png" alt="Logo do instagram"
           /></a>
           <a href="#"
-            ><img src="../img/twitter_logo.png" alt="Logo do twitter"
+            ><img src="./img/twitter_logo.png" alt="Logo do twitter"
           /></a>
           <p>2023- © wikimedic.Todos os Direitos Reservados</p>
         </article>
       </div>
+
       <script type="module">
         import { serverURL } from "./js/env.js";
         async function home() {
