fix (index.html): Adiciona pequenos ajustes na seção de segurança.

--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
 
       <article class="security">
         <section class="header">
-          <h2>CRIADA COM A SEGURANÇA QUE VOCÊ PRECISA</h2>
-          <p>
-            <a href="./html/about_project.html">Sobre o Projeto</a>
-          </p>
+          <div>
+            <h2>CRIADA COM A SEGURANÇA QUE VOCÊ PRECISA</h2>
+            <p>
+              <a href="./html/about_project.html">Sobre o Projeto</a>
+            </p>
+          </div>
           <p>
             Sabemos que com saúde não se pressupõe nenhuma informação, por isso
             seguindo nossa ética e segurança, aqui temos todas as informações e
@@ -117,19 +119,17 @@
         <section class="main">
           <h2>ÉTICA, SEGURANÇA E TECNOLOGIA</h2>
           <div>
-            <span
-              >Conforme a visão da empresa, a Wikimedic se propõe como um
-              bulário digital, sendo uma ponte para a informação com segurança e
-              a ética presente em cada bula de medicamento apresentada ao nosso
-              público.</span
-            >
-            <br /><br />
-            <span
-              >Utilizando da tecnologia como uma aliada nesse mundo atual, a
+            <p>
+              Conforme a visão da empresa, a Wikimedic se propõe como um bulário
+              digital, sendo uma ponte para a informação com segurança e a ética
+              presente em cada bula de medicamento apresentada ao nosso público.
+            </p>
+            <p>
+              Utilizando da tecnologia como uma aliada nesse mundo atual, a
               crianção de uma bula digital facilitadora para o público leigo
               utiliza sua vantagem para espalhar informação de forma segura e
-              objetiva.</span
-            >
+              objetiva.
+            </p>
           </div>
         </section>
       </article>
