feat (sobre.html): Adiciona responsividade à página sobre.html.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </p>
             <p>
               Utilizando da tecnologia como uma aliada nesse mundo atual, a
-              crianção de uma bula digital facilitadora para o público leigo
+              criação de uma bula digital facilitadora para o público leigo,
               utiliza sua vantagem para espalhar informação de forma segura e
               objetiva.
             </p>
@@ -198,8 +198,8 @@
         }
         home();
       </script>
-      <!-- <script src="./js/api/script.js"></script> -->
       <script src="./js/search.js"></script>
+      <!-- <script src="./js/api/script.js"></script> -->
     </footer>
   </body>
 </html>
