--- a/html/sobre.html
+++ b/html/sobre.html
@@ -94,8 +94,7 @@
             <img src="../img/andre_img.jpg" alt="Foto do aluno André Dias" />
             <p class="role">Programador Back-end</p>
             <p class="decription">
-              Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
-              sem, congue interdum consequat sit amet, viverra.
+              <b>André de Oliveira Dias</b>
             </p>
           </div>
           <div class="person">
@@ -105,32 +104,28 @@
             />
             <p class="role">Programador Front-end</p>
             <p class="decription">
-              Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
-              sem, congue interdum consequat sit amet, viverra.
+              <b>Arthur Rolemberg dos Santos</b>
             </p>
           </div>
           <div class="person">
             <img src="../img/bea_img.jpg" alt="Foto da aluna Beatriz Bezerra" />
             <p class="role">Designer / Líder de Projeto</p>
             <p class="decription">
-              Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
-              sem, congue interdum consequat sit amet, viverra.
+              <b>Beatriz Bezerra de Oliveira</b>
             </p>
           </div>
           <div class="person">
             <img src="../img/du_img.png" alt="Foto do aluno Eduardo Rossi" />
             <p class="role">Pesquisador</p>
             <p class="decription">
-              Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
-              sem, congue interdum consequat sit amet, viverra.
+              <b>Eduardo Rossi de Borba</b>
             </p>
           </div>
           <div class="person">
-            <img src="../img/aoyama.jpg" alt="Foto do aluno Gabriel Moreira" />
+            <img src="../img/gab_img.jpg" alt="Foto do aluno Gabriel Moreira" />
             <p class="role">Programador Front-end</p>
             <p class="decription">
-              Sed vel ex non risus feugiat blandit. Sed nec urna libero. Ut elit
-              sem, congue interdum consequat sit amet, viverra.
+              <b>Gabriel Moreira Silva</b>
             </p>
           </div>
         </div>
@@ -204,23 +199,23 @@
     <footer>
       <div>
         <article class="about_us">
-          <p>
+          <p class="title">
             <a href="./sobre.html">Sobre nós</a>
           </p>
-          <p>
+          <p class="topic">
             <a href="./sobre.html#mission">Missão</a>
           </p>
-          <p>
+          <p class="topic">
             <a href="./sobre.html#vision">Visão</a>
           </p>
-          <p>
+          <p class="topic">
             <a href="./sobre.html#values">Valores</a>
           </p>
         </article>
         <article class="contact">
-          <p>Contato</p>
-          <p>wikimedic@yourcompany.com</p>
-          <p>(11)-00000-0000</p>
+          <p class="title">Contato</p>
+          <p class="topic">wikimedic@yourcompany.com</p>
+          <p class="topic">(11)-00000-0000</p>
         </article>
         <article class="social_media">
           <a href=""
@@ -235,6 +230,35 @@
           <p>2023 - © Wikimedic. Todos os Direitos Reservados</p>
         </article>
       </div>
+      <script type="module">
+        import { serverURL } from "../js/env.js";
+        async function home() {
+          const response = await fetch(
+            "https://bula.vercel.app/pesquisar?nome=AMOXICILINA&pagina=1"
+          );
+          if (!response.ok) {
+            alert(
+              "Servidor Bulario API está offline. \nBase de Dados desligada ou desconectada, alguns medicamentos não estarão disponíveis "
+            );
+          } else {
+            console.log("API Bulario Funcionando");
+          }
+
+          document.cookie = "meuCookie=valor; path=/";
+          console.log(document.cookie);
+
+          const serverResponse = await fetch(serverURL);
+          if (!serverResponse.ok) {
+            alert(
+              "Servidor Wikimedic está offline. Serviços como Login, Comentário e Favoritos estarão indisponíveis"
+            );
+          } else {
+            console.log("Servidor Wikimedic Funcionando!");
+          }
+        }
+        home();
+      </script>
+      <script src="../js/search.js"></script>
     </footer>
     <script src="../js/carousel.js"></script>
   </body>
