feat (about_project.html): Adiciona responsividade à página about_project.html.

--- a/html/about_project.html
+++ b/html/about_project.html
@@ -88,8 +88,13 @@
           </p>
         </div>
         <figure class="standard_artic">
-          <img src="../img/abelha2.jpg" alt="" />
-          <figcaption><a href="" download>Baixar PDF</a></figcaption>
+          <img
+            src="../img/capa_article_wikimedic.png"
+            alt="Capa do Artigo da Wikimedic"
+          />
+          <figcaption>
+            <a href="../artigos/wikimedic_article.pdf" download>Baixar PDF</a>
+          </figcaption>
         </figure>
       </article>
 
@@ -104,19 +109,46 @@
         </section>
         <div class="slider">
           <figure class="standard_artic">
-            <img src="../img/abelha2.jpg" alt="" />
+            <img
+              src="../img/capa_compreensao_usuario.png"
+              alt="Capa do Artigo: Bulas de medicamento compreensão pelo usuário"
+            />
             <p></p>
-            <figcaption><a href="" download>Baixar PDF</a></figcaption>
+            <figcaption>
+              <a
+                href="../artigos/Bulas de medicamentos compreensão pelo usuário.pdf"
+                download
+                >Baixar PDF</a
+              >
+            </figcaption>
           </figure>
           <figure class="standard_artic">
-            <img src="../img/abelha2.jpg" alt="" />
+            <img
+              src="../img/capa_importancia_leitura.png"
+              alt="Capa do Artigo: A bula de medicamentos a importância da leitura das bulas"
+            />
             <p></p>
-            <figcaption><a href="" download>Baixar PDF</a></figcaption>
+            <figcaption>
+              <a
+                href="../artigos/A Bula de medicamentos A importância da leitura das Bulas.pdf"
+                download
+                >Baixar PDF</a
+              >
+            </figcaption>
           </figure>
           <figure class="standard_artic">
-            <img src="../img/abelha2.jpg" alt="" />
+            <img
+              src="../img/capa_maiores_dificuldades.png"
+              alt="Capa do Artigo: O paciente e a bula e suas maiores dificuldades"
+            />
             <p></p>
-            <figcaption><a href="" download>Baixar PDF</a></figcaption>
+            <figcaption>
+              <a
+                href="../artigos/O paciente e a bula e suas maiores dificuldades.pdf"
+                download
+                >Baixar PDF</a
+              >
+            </figcaption>
           </figure>
         </div>
       </article>
@@ -209,8 +241,6 @@
       </article>
 
       <article class="cannabis">
-        <a href="">ACESSE AQUI!</a>
-        <div></div>
         <h2>CANNABIS SATIVA</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
@@ -218,6 +248,11 @@
           accusamus est cum hic adipisci quis voluptatum harum quibusdam sequi,
           beatae ipsum dicta?
         </p>
+        <a
+          href="https://padlet.com/beatrizbezerra39/cannabis-sativa-4hjzzsd86eamijrl"
+          >ACESSE AQUI!</a
+        >
+        <div></div>
       </article>
     </main>
 
