--- a/html/medic.html
+++ b/html/medic.html
@@ -161,7 +161,34 @@
         </article>
       </section>
     </article >
+    <script type="module">
+      import { serverURL } from "../js/env.js";
+      async function home() {
+        const response = await fetch(
+          "https://bula.vercel.app/pesquisar?nome=AMOXICILINA&pagina=1"
+        );
+        if (!response.ok) {
+          alert(
+            "Servidor Bulario API está offline. \nBase de Dados desligada ou desconectada, alguns medicamentos não estarão disponíveis "
+          );
+        } else {
+          console.log("API Bulario Funcionando");
+        }
 
+        document.cookie = "meuCookie=valor; path=/";
+        console.log(document.cookie);
+
+        const serverResponse = await fetch(serverURL);
+        if (!serverResponse.ok) {
+          alert(
+            "Servidor Wikimedic está offline. Serviços como Login, Comentário e Favoritos estarão indisponíveis"
+          );
+        } else {
+          console.log("Servidor Wikimedic Funcionando!");
+        }
+      }
+      home();
+    </script>
     <script src="../js/env.js" type="module"></script>
     <script src="../js/search.js" type="module"></script>
     <script src="../js/metodoServer.js" type="module" defer></script>
